don't display timeout durations known to be wrong

--- a/html/components/sbo-input/index.html
+++ b/html/components/sbo-input/index.html
@@ -383,7 +383,7 @@
             </select>
           </td>
           <td>
-            <span sbClass="sbHide: Running: !">running</span><span sbClass="sbHide: Running" sbDisplay="Duration: sbToLongTime"></span>
+            <span sbDisplay="Running, Duration: sbToTimeoutDuration"></span>
           </td>
           <td>
             <span sbClass="sbHide: Running: !" sbDisplay="PeriodClockEnd: sbToLongTime"></span>
