--- a/html/components/sk-sheet/index.html
+++ b/html/components/sk-sheet/index.html
@@ -171,7 +171,7 @@
             </select>
           </td>
           <td colspan="4" class="Retained"><button class="OROnly" sbToggle="RetainedReview">Retained</button></td>
-          <td colspan="5" class="Duration" sbDisplay="Running, Duration: sksToToDuration"></td>
+          <td colspan="5" class="Duration" sbDisplay="Running, Duration: sbToTimeoutDuration"></td>
         </tr>
         <tr class="Edits">
           <td class="EditButton"></td>
