minor fixes and tweaks

--- a/html/components/penalty-list/index.html
+++ b/html/components/penalty-list/index.html
@@ -8,10 +8,10 @@
     sbClass="sbHide: IsCurrent: ! | Stand: Clock.Time: <=10000 | Done: EndFielding: sbIsNotEmpty"
   >
     <div class="Info">
-      <span class="sbVeryVeryImportant">
+      <span class="sbVeryImportant">
         <span sbDisplay="^AlternateName(box),^UniformColor,^Name"></span> <span sbDisplay="RosterNumber"></span>
       </span>
-      <span class="sbVeryVeryImportant Instruction" sbDisplay="Clock.Time, EndFielding: penToInstruction"></span>
+      <span class="sbVeryImportant Instruction" sbDisplay="Clock.Time, EndFielding: penToInstruction"></span>
       <span class="sbVeryVeryImportant" sbDisplay="Clock.Time: sbToSeconds"></span>
       <span class="sbImportant">
         <span sbDisplay="PenaltyCodes"></span> | <span>Total: <span sbDisplay="TotalPenalties"></span></span>
