--- a/html/nso/pbt/index.css
+++ b/html/nso/pbt/index.css
@@ -1,11 +1,27 @@
 body { display: flex; flex-direction: column; height: 100dvh; }
-#List, #Unassigned { flex: 1; }
+#List { flex: 1; }
 
-#Unassigned { display: flex; flex-direction: column; justify-content: flex-end; }
-#Unassigned>div { display:flex; justify-content: space-around; }
-#Unassigned.SwappedTeams [Team="1"] { order: 1; }
-#Unassigned .perTeam { width: 25rem; display: flex; justify-content: center; gap: var(--element-gap); }
-#Unassigned .col1 { width: 7.5rem; }
+#Unassigned { 
+    display: grid; 
+    grid-template-columns: minmax(min-content, max-content) minmax(min-content, 1fr) minmax(min-content, 1fr); 
+    grid-auto-rows: minmax(min-content, max-content); 
+    place-items: stretch; 
+    align-content: end; 
+    grid-auto-flow: dense;
+    background-color: var(--group-bg); 
+}
+#Unassigned>div { display:contents; }
+#Unassigned>.sbHeader>* { background-color: var(--header-bg); padding: var(--element-gap); }
+#Unassigned>.sbHeader>.col1 { border-top-left-radius: var(--segment-corner-radius); }
+#Unassigned:not(.SwappedTeams)>.sbHeader>[Team="2"], #Unassigned.SwappedTeams>.sbHeader>[Team="1"] { border-top-right-radius: var(--segment-corner-radius); }
+#Unassigned:not(.SwappedTeams) [Team="1"], #Unassigned.SwappedTeams [Team="2"] { grid-column: 2; }
+#Unassigned:not(.SwappedTeams) [Team="2"], #Unassigned.SwappedTeams [Team="1"] { grid-column: 3; }
+#Unassigned:not(.SwappedTeams)>:not(.sbHeader)>[Team="1"], #Unassigned.SwappedTeams>:not(.sbHeader)>[Team="2"] { background-color: var(--table-row-stripe); padding-right: var(--element-gap); }
+#Unassigned .perTeam { display: flex; flex-wrap: wrap; justify-content: center; align-items: center; gap: var(--element-gap); }
+#Unassigned .col1 { grid-column: 1; }
+#Unassigned .col1:not(.sbStack) { display: flex; justify-content: center; align-items: center; }
+#Unassigned>:not(.sbHeader)>* { padding: calc(0.5 * var(--element-gap)); }
+#Unassigned>:not(.sbHeader) + .sbGroup>* { border-top: var(--group-border-top); }
 
 #Buttons { height: 33%; }
 #Buttons>div { height: 100%; }
