fix label on newly started timeout

--- a/html/views/standard/index.html
+++ b/html/views/standard/index.html
@@ -116,7 +116,7 @@
       <div class="ShowInLineup Clock Description Small Box AutoFit">Lineup</div>
       <div
         class="ShowInTimeout Clock Description Small Box AutoFit"
-        sbDisplay="TimeoutOwner, OfficialReview: sbToTimeoutType"
+        sbDisplay="TimeoutOwner, OfficialReview, Clock(Lineup).Running: sbToTimeoutType"
         sbClass="Red: Clock(Lineup).Running: !"
       ></div>
       <div
