allow setting hotkey on OTO button

--- a/html/components/sk-input/index.html
+++ b/html/components/sk-input/index.html
@@ -82,7 +82,9 @@
     <button class="sbKeyControl" sbAttr="id:-:'Team[Team]RetainedOfficialReview'" sbToggle="RetainedOfficialReview">Retained</button>
     <div class="OfficialTimeout">
       <div>
-        <button id="OfficialTimeout" sbClass="sbActive: ^TimeoutOwner: ==='O'" sbSet="^OfficialTimeout">Official Timeout</button>
+        <button class="sbKeyControl" id="OfficialTimeout" sbClass="sbActive: ^TimeoutOwner: ==='O'" sbSet="^OfficialTimeout">
+          Official Timeout
+        </button>
       </div>
     </div>
   </div>
