inhibit LT box buttons when pbt is used

--- a/html/components/settings-tab/index.html
+++ b/html/components/settings-tab/index.html
@@ -11,6 +11,7 @@
         </select>
       </span>
       <button sbToggle="$.Penalties.UseLT">CRG Tracks Lineups</button>
+      <button sbToggle="$.Penalties.UsePBT">CRG Times Penalties</button>
     </div>
     <div class="sbGroup ScoreBoardOptions">
       <button class="ui-button-small" sbCall="stgOpenIntermissionDialog">Intermission Labels</button>
