--- a/html/components/penalty-list/index.html
+++ b/html/components/penalty-list/index.html
@@ -13,14 +13,15 @@
       </span>
       <span class="sbVeryImportant Instruction" sbDisplay="Clock.Time, EndFielding: penToInstruction"></span>
       <span class="sbVeryVeryImportant" sbDisplay="Clock.Time: sbToSeconds"></span>
-      <span class="sbImportant">
-        <span sbDisplay="PenaltyCodes"></span> | <span>Total: <span sbDisplay="TotalPenalties"></span></span>
+      <span>
+        <span sbDisplay="PenaltyDetails: penDetailButtons: html"></span>
+        <button sbCall="penAdd">Add</button>
       </span>
     </div>
     <div class="sbShowOnPbt Edit">
       <span>
         <button sbClass="sbClickMe: CurrentSkater, TotalPenalties: penFoOrExp" sbCall="penSubstitute">Substitute</button>
-        <button sbCall="penReassign">Reassign</button>
+        <button sbCall="penReassign">Change</button>
       </span>
       <span>
         <button sbClass="sbClickMe: EndFielding: sbIsNotEmpty | sbHide: Clock.Time: > 0" sbSet="IsCurrent: false">Has Left</button>
@@ -30,9 +31,8 @@
         <button sbToggle="TimingStopped"><span class="ui-icon ui-icon-pause"></span></button>
         <button sbSet="Clock.Time:+1000:change">+1</button>
       </span>
-      <span>
-        <button sbCall="penAdd">Add</button>
-        <button sbSet="RemovePenalty">Remove</button>
+      <span class="sbImportant">
+        <span>Total: <span sbDisplay="TotalPenalties"></span></span>
       </span>
     </div>
   </div>
@@ -82,5 +82,6 @@
         sbCall="sbCloseDialog"
       ></div>
     </div>
+    <div class="sbGroup"><button sbSet="Remove">Delete</button></div>
   </div>
 </div>
