--- a/html/external/jquery-ui/jquery-ui.theme.css
+++ b/html/external/jquery-ui/jquery-ui.theme.css
@@ -69,7 +69,7 @@ a.ui-button,
 a:link.ui-button,
 a:visited.ui-button,
 .ui-button {
-	color: #004276;
+	color: var(--button-fg);
 	text-decoration: none;
 }
 .ui-state-hover,
