--- a/html/components/penalty-list/index.html
+++ b/html/components/penalty-list/index.html
@@ -13,9 +13,9 @@
       </span>
       <span class="sbVeryImportant Instruction" sbDisplay="Clock.Time, EndFielding: penToInstruction"></span>
       <span class="sbVeryVeryImportant" sbDisplay="Clock.Time: sbToSeconds"></span>
-      <span>
-        <span sbDisplay="PenaltyDetails: penDetailButtons: html"></span>
-        <button sbCall="penAdd">Add</button>
+      <span class="sbImportant">
+        <span class="sbShowOnBoxView"><span sbDisplay="PenaltyCodes"></span> | </span>
+        <span>Total: <span sbDisplay="TotalPenalties"></span></span>
       </span>
     </div>
     <div class="sbShowOnPbt Edit">
@@ -31,8 +31,9 @@
         <button sbToggle="TimingStopped"><span class="ui-icon ui-icon-pause"></span></button>
         <button sbSet="Clock.Time:+1000:change">+1</button>
       </span>
-      <span class="sbImportant">
-        <span>Total: <span sbDisplay="TotalPenalties"></span></span>
+      <span>
+        <span sbDisplay="PenaltyDetails: penDetailButtons: html"></span>
+        <button sbCall="penAdd">Add</button>
       </span>
     </div>
   </div>
