further tweak UI for accessibility

--- a/html/components/lt-sheet/index.html
+++ b/html/components/lt-sheet/index.html
@@ -89,7 +89,7 @@
       <div class="sbGroup sbHeader"><span>Skater</span></div>
       <div class="sbGroup Skater">
         <span sbPrefix="f:[*]" sbButtonGroup>
-          <button sbSet="Skater: null">?</button>
+          <button sbClass="sbActive: Skater, NotFielded: ltsIsUnknownSkater" sbSet="Skater: null | NotFielded: false">?</button>
           <button sbClass="sbHide:-: sbIsUpcomingJam" sbSet="Skater: null" sbToggle="NotFielded">n/a</button>
           <button
             sbContext="/ScoreBoard.Game([game]).Team([TeamJam])"
