--- a/html/settings/sb_data/index.css
+++ b/html/settings/sb_data/index.css
@@ -7,7 +7,7 @@
 #sbData .Edit { min-width: 27px; } 
 #sbData .Type .ui-button { font-size: 75%; } 
 #sbData .Type th .ui-button { font-size: 50%; } 
-#sbData tr.Selected button.Select { background: #3f3; } 
+#sbData tr.Selected button.Select { background: var(--element-active-bg); color: var(--element-active-fg); box-shadow: var(--button-active-shadow); transform: var(--button-active-transform); } 
 #sbData button.Delete:disabled { color: #bbb; } 
 #sbData .Name { text-align: left; }
 #sbData span.Name { padding-left: 5px; }
