--- a/html/views/standard/index.html
+++ b/html/views/standard/index.html
@@ -38,10 +38,10 @@
         <div class="Penalties" sbClass="sbHide:&_HidePenaltyClocks">
           <div
             class="Box Red"
-            sbForeach="Position: -Jammer: penaltyTime,num: resort=PenaltyTime"
+            sbForeach="Position:: penaltyTime,num: resort=PenaltyTime"
             sbAttr="penaltyTime:PenaltyTime"
             sbDisplay="PenaltyTime: sbToSeconds"
-            sbClass="InBox:PenaltyTime: > 0"
+            sbClass="InBox:PenaltyTime: > 0 | sbHide: ^StarPass: dspIsJamming"
           ></div>
         </div>
         <div
@@ -70,7 +70,7 @@
         <div
           class="ShowInJam Clock Jammer"
           sbForeach="Position: Jammer,Pivot: only"
-          sbClass="HasLead: ^DisplayLead | Hidden: StarPass: dspShowJammer | HasClock: PenaltyTime: > 0"
+          sbClass="HasLead: ^DisplayLead | Hidden: ^StarPass: dspIsNotJamming | HasClock: PenaltyTime: > 0"
         >
           <span class="Name AutoFit" sbAutoFitOn="PenaltyTime, &_HidePenaltyClocks" sbDisplay="Name, ^DisplayLead: dspToJammerName"></span>
           <span class="PenaltyTime Box Red AutoFit" sbDisplay="PenaltyTime: sbToSeconds"></span>
