--- a/html/views/standard/index.html
+++ b/html/views/standard/index.html
@@ -16,7 +16,7 @@
     <div class="DisplayPane" id="html"><iframe class="object" sbAttr="src: &_CustomHtml"></iframe></div>
     <div class="DisplayPane" id="whiteboard"><iframe class="object" src="../wb/"></iframe></div>
     <div
-      class="DisplayPane Show"
+      class="DisplayPane"
       id="scoreboard"
       sbContext="ScoreBoard.CurrentGame"
       class="JamScore"
@@ -154,6 +154,7 @@
         <div class="Time Box AutoFit" sbContext="Clock(Intermission)" sbDisplay="Time, Direction: sbToTime"></div>
       </div>
     </div>
+    <div class="DisplayPane Show" id="cover"></div>
 
     <div class="sbTemplates">
       <div id="Banners" sbContext="ScoreBoard.Media.Format(images).Type(sponsor_banner)">
