--- a/html/components/plt-input/index.html
+++ b/html/components/plt-input/index.html
@@ -8,7 +8,7 @@
             id="head"
             class="sbShowOnPureLt"
             sbDisplay="AlternateName(plt),UniformColor,Name"
-            sbCss="color: Color(plt_fg) | background-color: Color(plt_bg) | text-shadow: Color(plt_glow): sbCssToShadow"
+            sbCss="color: Color(plt.fg) | background-color: Color(plt.bg) | text-shadow: Color(plt.glow): sbCssToShadow"
             sbCall="openOptionsDialog"
           ></td>
           <td class="sbShowOnPlt AutoFit">Bench</td>
@@ -23,7 +23,7 @@
             id="head"
             class="sbShowOnPurePt sbShowOnPlt sbShowOnSheet"
             sbDisplay="AlternateName(plt),UniformColor,Name"
-            sbCss="color: Color(plt_fg) | background-color: Color(plt_bg) | text-shadow: Color(plt_glow): sbCssToShadow"
+            sbCss="color: Color(plt.fg) | background-color: Color(plt.bg) | text-shadow: Color(plt.glow): sbCssToShadow"
             sbCall="openOptionsDialog"
           ></td>
           <td
@@ -31,7 +31,7 @@
             id="head"
             class="sbShowOnWhiteboard"
             sbDisplay="AlternateName(whiteboard),Name"
-            sbCss="color: Color(whiteboard_fg) | background-color: Color(whiteboard_bg) | text-shadow: Color(whiteboard_glow): sbCssToShadow"
+            sbCss="color: Color(whiteboard.fg) | background-color: Color(whiteboard.bg) | text-shadow: Color(whiteboard.glow): sbCssToShadow"
           ></td>
           <td class="sbShowOnPt AutoFit">FO_Ex</td>
           <td id="totalPenalties" sbDisplay="TotalPenalties: 'Σ ' + v"></td>
