--- a/html/views/standard/index.html
+++ b/html/views/standard/index.html
@@ -50,7 +50,7 @@
           sbClass="NoInitial: NoInitial | Overtime: /ScoreBoard.CurrentGame.InOvertime"
         ></div>
         <div class="ShowInJam Clock StarPass AutoFit" sbDisplay="StarPass: sbToSP"></div>
-        <div class="DotTimeouts Box" sbCss="background: Color(scoreboard_dots_bg)">
+        <div class="DotTimeouts Box" sbCss="background: Color(scoreboard_dots.bg)">
           <div class="Dot Timeout1" sbClass="Used: Timeouts: <1" sbCss="background: Color(scoreboard_dots.fg)"></div>
           <div class="Dot Timeout2" sbClass="Used: Timeouts: <2" sbCss="background: Color(scoreboard_dots.fg)"></div>
           <div class="Dot Timeout3" sbClass="Used: Timeouts: <3" sbCss="background: Color(scoreboard_dots.fg)"></div>
