Fix plt input when numbers are duplicated & highlight duplicate numbers on team editor

--- a/html/components/sk-sheet/index.html
+++ b/html/components/sk-sheet/index.html
@@ -155,7 +155,7 @@
           </td>
         </tr>
       </tbody>
-      <tbody class="Timeout sbShowOnOperator" sbForeach="Timeout:: sbCompareJam: onInsert=sbReverseOnNonSheet"" sbAttr="Jam: PrecedingJamNumber,WalltimeStart: sksToToJamNumber" >
+      <tbody class="Timeout sbShowOnOperator" sbForeach="Timeout:: sbCompareJam: onInsert=sbReverseOnNonSheet" sbAttr="Jam: PrecedingJamNumber,WalltimeStart: sksToToJamNumber" >
         <tr class="Timeout" sbClass="IsOR: Review, Owner: sksIsOrThisTeam">
           <td class="EditButton"><button sbCall="sksToggleEdit">✎</button></td>
           <td colspan="9" class="Type">
