--- a/html/components/plt-input/index.html
+++ b/html/components/plt-input/index.html
@@ -41,7 +41,7 @@
         <tr
           class="Skater Code"
           sbForeach="Skater:: rosterNumber: resort=RosterNumber"
-          sbAttr="role: Role | rosterNumber: RosterNumber | warn: PenaltyCount, Penalty(0).Code: sbToWarnLevel"
+          sbAttr="role: Role | rosterNumber: RosterNumber: v + ' ' + k.Skater | warn: PenaltyCount, Penalty(0).Code: sbToWarnLevel"
           sbClass="Captain: Flags: ==='C'"
         >
           <td class="Role Bench sbShowOnLt" rowspan="2" sbClass="OnTrack: Role: ==='Bench'" sbSet="Role: 'Bench'">
@@ -85,7 +85,7 @@
         <tr
           class="Skater Jam"
           sbForeach="Skater:: rosterNumber: resort=RosterNumber"
-          sbAttr="role: Role | rosterNumber: RosterNumber | warn: PenaltyCount, Penalty(0).Code: sbToWarnLevel"
+          sbAttr="role: Role | rosterNumber: RosterNumber: v + ' ' + k.Skater | warn: PenaltyCount, Penalty(0).Code: sbToWarnLevel"
         >
           <td
             sbForeach="Penalty: 1,2,3,4,5,6,7,8,9,0: only"
