pre-select WFTDA ruleset in adhoc game setup

--- a/html/components/sbo-input/index.html
+++ b/html/components/sbo-input/index.html
@@ -189,7 +189,7 @@
             <option
               sbForeach="Ruleset:: sbOrderRsAsTree: resort=Parent"
               sbContext="/ScoreBoard.Rulesets"
-              sbAttr="value: Id"
+              sbAttr="value: Id | selected: Id: v === 'WFTDARuleset'"
               sbDisplay="Name: sbIndentByParents: html"
             ></option>
           </select>
