--- a/html/nso/plt/index.css
+++ b/html/nso/plt/index.css
@@ -1,13 +1,19 @@
 body { user-select: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -o-user-select: none; }
 body[showTeam="1"]>.Content>[Team="2"], body[showTeam="2"]>.Content>[Team="1"] { display: none; }
+body[showTeam="1"]>.Content>.JamAdvance:not(.adv1pending), 
+body[showTeam="2"]>.Content>.JamAdvance:not(.adv2pending),
+body[showTeam="both"]>.Content>.JamAdvance:not(.adv1pending):not(.adv2pending) { display: none; }
 
-.Content { display: grid; grid: auto auto auto auto / 1fr 1fr; gap: var(--segment-gap); }
+.Content { display: grid; grid: auto auto auto auto auto / 1fr 1fr; gap: var(--segment-gap); }
 body[showTeam="1"]>.Content { grid-template-columns: 1fr 0; }
 body[showTeam="2"]>.Content { grid-template-columns: 0 1fr; }
 .Content>.GameAdvance { grid-area: 1 / 1 / 2 / 3; }
-.Content>[Team="1"] { grid-column: 1 / 2; }
-.Content>[Team="2"] { grid-column: 2 / 3; }
+.Content>.JamAdvance { grid-area: 3 / 1 / 4 / 3; }
+.Content>[Team="1"], body[showTeam="1"]>.Content>.JamAdvance { grid-column: 1 / 2; }
+.Content>[Team="2"], body[showTeam="2"]>.Content>.JamAdvance { grid-column: 2 / 3; }
 .Content>.Input { grid-row: 2 / 3; }
-.Content>.Sheet { grid-row: 3 / 4; }
+.Content>.Sheet { grid-row: 4 / 5; }
+
+.Content>.JamAdvance>button { width: 100%; }
 
 #OptionsDialog .Teams { flex-direction: column; } 
