--- a/html/nso/jt/index.css
+++ b/html/nso/jt/index.css
@@ -1,26 +1,87 @@
-body { margin: 0; padding: 0; }
-.sbSegment { height: 50dvh; display: flex; flex-direction: column; }
-.sbGroup { flex: 1; padding: 0; }
+:root { --button-margin: min(2 * var(--segment-corner-radius), 1dvh); }
+body { margin: 0; padding: 0; width: 100dvw; height: 100dvh; }
+div { position: absolute; margin: 0; top: 0; left: 0; height: inherit; width: inherit; text-align: center; border-radius: var(--segment-corner-radius); }
+button.AutoFit { position: absolute; margin: var(--button-margin); top: 0; left: 0; height: calc(100% - 2 * var(--button-margin)); width: calc(100% - 2 *  var(--button-margin)); }
+button.AutoFit.Big { margin: var(--segment-corner-radius); height: calc(100% - 2 * var(--segment-corner-radius)); width: calc(100% - 2 *  var(--segment-corner-radius)); }
+.Group { background: var(--group-bg); color: var(--group-fg); }
 
-.Clocks { flex: 2; }
 .Clocks [Clock]:not(.Running) { display: none; }
 .Clocks [Clock].Running ~ [Clock].Running { display: none; }
-.Clocks .ClockName { font-weight: bold; font-size: 5dvh; }
-.Clocks .Running .ClockName { background: #3f3; } 
-.Clocks [Clock="Jam"].InJam .ClockName { background: #3f3; } 
-.Clocks .Running.NoMoreJam .ClockName { background: #f33; } 
-.Clocks .Time>button { font-size: 5dvh; padding: 0.1em 0.4em; }
-.Clocks .Time>div { font-size: 7dvh; margin: 0.2em;  }
+.Clocks .ClockName { font-weight: bold; }
+.Clocks .Running, .Clocks [Clock="Jam"].InJam { background: var(--element-active-bg); color: var(--element-active-fg); } 
+.Clocks .Running.NoMoreJam { background: var(--element-inbox-bg); color: var(--element-inbox-fg); } 
+.Clocks .Time>button { padding: 0 0.4em; margin: 0.3em 0; vertical-align: unset; }
 
-.TimeoutType { flex: 3; display: flex; gap: 3dvh; }
-.TimeoutType .Count { font-size: 5vh; }
-.TimeoutType .TeamName { font-weight: bold; font-size: 5vh; }
-.TimeoutType>div { flex: 2; }
-.TimeoutType>.OTO { flex: 1; }
-.TimeoutType>div>div { flex: 1; }
-.TimeoutType>[Team="2"]>div { flex-direction: row-reverse; }
-.TimeoutType button { font-size: 5dvh; padding: 0.3em; flex: 1; }
+.TimeoutType .Count { font-weight: bold; }
+.TimeoutType .TeamName { font-weight: bold; }
 
-.sbGroup.Settings, .sbGroup.ReplaceInfo { flex: 0; font-size: 3dvh; }
-.sbGroup.Settings>button, .sbGroup.ReplaceInfo>span { padding: 0.3em 0.6em; }
-.JamControls>button {  flex: 1; height: 100%; font-size: 10dvh; padding: 0.1em; }
+.Settings { background-color: var(--nodistract-bg); color: var(--nodistract-fg); }
+
+/* 
+ * Positioning 
+ */
+ @media (min-aspect-ratio: 1/1) {
+    .Clocks { height: 24.5dvh; }
+    .Clocks>.Period { width: 49.5dvw; }
+    .Clocks>.Jam { left: 50.5dvw; width: 49.5dvw; }
+    .ClockName { height: 50%; }
+    .Time { top: 50%; height: 50%; }
+
+    .TimeoutType { top: 25dvh; height: 24.5dvh; }
+    [Team] { width: 43.5dvw; }
+    [Team="2"] { left: 56.5dvw; }
+    .TeamName { height: 8.5dvh; }
+    .ToButtonRow { height: 8dvh; width: 21.5dvw; }
+    .TTO, .OR { top: 8.5dvh; }
+    .Retained { top: 16.5dvh; }
+    [Team="1"] .TTO, [Team="2"] .OR, [Team="2"] .Retained { left: 22dvw; }
+    .OTO { left: 44dvw; width: 12dvw; }
+    .ToButtonRow>.Button { width: 80%; }
+    .ToButtonRow>.Count { left: 80%; width: 20%; }
+    [Team="2"] .Button { left: 20%; }
+    [Team="2"] .Count { left: 0; }
+
+    .MainButtons { top: 50dvh; height: 50dvh; }
+    .ReplaceInfo, .Settings { height: 15dvh; }
+    .Settings>div { width: calc(100% / 3); }
+    .Settings>.ToggleUndo { left: calc(100% / 3); }
+    .Settings>.Replace { left: calc(2 * 100% / 3); }
+    .Undo, .Start, .Stop, .Timeout { top: 15dvh; height: 35dvh; }
+    .Undo { left: 30dvw; width: 20dvw; }
+    .Start { left: 50dvw; width: 20dvw; }
+    .sbHide + .Start { left: 30dvw; width: 40dvw; }
+    .Stop, .Timeout { width: 30dvw; }
+    .Timeout { left: 70dvw; }
+ }
+
+@media (max-aspect-ratio: 1/1) {
+    .Clocks { height: 12.5dvh; }
+    .Clocks>.Period { height: 6dvh; }
+    .Clocks>.Jam { top: 6.5dvh; height: 6dvh; }
+    .ClockName { width: 50dvw; }
+    .Time { left: 50dvw; width: 50dvw; }
+
+    .TimeoutType { top: 13dvh; height: 30.5dvh; }
+    [Team] { width: 49.5dvw; height: 24dvh; }
+    [Team="2"] { left: 50.5dvw; }
+    .ToButtonRow, .TeamName { height: 6dvh; }
+    .TTO { top: 6dvh; }
+    .OR { top: 12dvh; }
+    .Retained { top: 18dvh; }
+    .OTO { top: 24.5dvh; height: 6dvh; }
+    .ToButtonRow>.Button { width: 80%; }
+    .ToButtonRow>.Count { left: 80%; width: 20%; }
+    [Team="2"] .Button { left: 20%; }
+    [Team="2"] .Count { left: 0; }
+
+    .MainButtons { top: 44dvh; height: 56dvh; }
+    .ReplaceInfo, .Settings { height: 6dvh; }
+    .Settings>div { width: calc(100% / 3); }
+    .Settings>.ToggleUndo { left: calc(100% / 3); }
+    .Settings>.Replace { left: calc(2 * 100% / 3); }
+    .Undo { top: 6dvh; height: 12.5dvh; }
+    .Start { top: 18.5dvh; height: 12.5dvh; }
+    .sbHide + .Start { top: 6dvh; height: 25dvh; }
+    .Stop, .Timeout { top: 31dvh; height: 25dvh; width: 50dvw; }
+    .Timeout { left: 50dvw; }
+}
