--- a/html/components/sk-input/index.css
+++ b/html/components/sk-input/index.css
@@ -11,8 +11,7 @@ body:not([showTeam="2"]) [Team] ~ [Team]>.SkInput .ScoreRow  { flex-direction: r
 /* timeout row */
 .SkInput .Timeouts > * { flex: 1; }
 .SkInput .Timeouts { position: relative; }
-[Team="1"] .SkInput .OfficialTimeout>div { display: none; }
-[Team="2"] .SkInput .OfficialTimeout>div { position: absolute; right: calc(50% + (0.5 * var(--segment-gap))); width: 100%; }
+.SkInput .OfficialTimeout>div { position: absolute; right: calc(50% + (0.5 * var(--segment-gap))); width: 100%; }
 .SkInput .OfficialTimeout button { transform: translateY(-50%) var(--button-transform); }
 .SkInput .OfficialTimeout button:hover { transform: translateY(-50%) var(--button-hover-transform); }
 
