Handle early leaves and unending box trips

--- a/html/components/penalty-list/index.css
+++ b/html/components/penalty-list/index.css
@@ -4,13 +4,13 @@
 #PenaltyList>:first-child { border-top-left-radius: var(--segment-corner-radius); border-top-right-radius: var(--segment-corner-radius); }
 #PenaltyList>:last-child { border-bottom-left-radius: var(--segment-corner-radius); border-bottom-right-radius: var(--segment-corner-radius); }
 
-#PenaltyList .Trip:not(.Stand):not(.Done) { background-color: var(--element-inbox-bg); color: var(--element-inbox-fg); border-color: var(--element-inbox-fg); }
+#PenaltyList .Trip:not(.Stand):not(.Done):not(.Old) { background-color: var(--element-inbox-bg); color: var(--element-inbox-fg); border-color: var(--element-inbox-fg); }
 #PenaltyList .Trip.Stand:not(.Done) { background-color: yellow; color: #000; border-color: #000; }
-#PenaltyList .Trip.Done { background-color: #6fdf6f; color: #000; border-color: #000; }
+#PenaltyList .Trip.Done:not(.Old) { background-color: #6fdf6f; color: #000; border-color: #000; }
 #PenaltyList .Trip [warn="1"] { background-color: #ffff00; color: #000; }
 #PenaltyList .Trip [warn="2"] { background-color: #ff9010; color: #000; }
 #PenaltyList .Trip [warn="3"] { background-color: #ff2828; color: #000; }
-#PenaltyList .Trip:not(.Stand):not(.Done) [warn="3"] { background-color: #fff; color: #000; }
+#PenaltyList .Trip:not(.Stand):not(.Done):not(.Old) [warn="3"] { background-color: #fff; color: #000; }
 
 #PenaltySelector .Codes { flex-wrap: wrap; gap: 0.5em; }
 #PenaltySelector .Codes>div { width: 150px; height: 90px; border: 1px solid black; font-weight: bold; background-color: #fff; } 
