--- a/html/components/sbo-input/index.html
+++ b/html/components/sbo-input/index.html
@@ -281,7 +281,7 @@
       </div>
       <div class="sbGroup">
         <button sbSet="MaximumTime: -1000: change">-sec</button>
-        <input type="text" size="5" sbControl="MaximumTime: sbToLongTime: sbFromLongTime" />
+        <input type="text" size="5" sbControl="MaximumTime: sbToLongTime: sbFromTime" />
         <button sbSet="MaximumTime: +1000: change">+sec</button>
       </div>
     </div>
